--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Order List</title>
 </head>
 <body>
+    <div class="app" id="app">
+        <orders-wrapper></orders-wrapper>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    
+    <script src="./app.js"></script>
 </body>
 </html>
