Add most of functionality, style app and update README.md
Added project image in README.md,
Styled the app,
Selecting order cause change of the total price and
change of order appearance

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div class="app" id="app">
-        <orders-wrapper></orders-wrapper>
+        <div class="app__header">Order List</div>
+        <orders-wrapper class="orderWrapper"></orders-wrapper>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     
